kubernetes/devops-api-stack/overlays/lab/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api
  labels:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/instance: devops-api
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: devops-api-stack
spec:
  ingressClassName: nginx
  rules:
    - host: devops-api.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
